--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h4>What is the captial of India?</h4>
+	<div><input type="radio" name="capital" value="new_Delhi"/>New Delhi</div>
+	<div><input type="radio" name="capital" value="Mumbai"/>Mumbai</div>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" style="max-width: 600px; margin: 10px; padding: 15px; border-left: 8px solid green;background-color: #f8fffe;font-weight: bold;">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
